# elysium-mcp

./: .gitignore  Cargo.toml  LICENSE  README.md  manifest.json
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
src/commands/: audit.rs  fix.rs  health.rs  index.rs  init.rs  mod.rs  related.rs  search.rs  semantic_search.rs  status.rs  tags.rs  validate.rs
src/core/: frontmatter.rs  mod.rs  note.rs  paths.rs  schema.rs  wikilink.rs
src/mcp/: mod.rs  server.rs
src/search/: embedding.rs  engine.rs  mod.rs  vectordb.rs
